<resources>
    <string name="app_name">Atma Rental</string>
    <string name="loading">Loading..</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="clear_field">Clear Field</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="harga_sewa_hari">Harga Sewa (/Hari)</string>
    <string name="mobil">Mobil</string>
    <string name="promo">Promo</string>
    <string name="transaksi">Transaksi</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="nomor_transaksi">Nomor Transaksi</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="alamat">Alamat</string>
    <string name="rating">Rating</string>
    <string name="bahasa">Bahasa</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="jumlah_transaksi">Jumlah Transaksi</string>
    <string name="id_customer">ID Customer</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="nomor_sim">Nomor SIM</string>
</resources>