<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_mobil"
        android:icon="@drawable/ic_baseline_car_rental_24"
        android:title="@string/mobil" />

    <item
        android:id="@+id/navigation_promo"
        android:icon="@drawable/ic_baseline_discount_24"
        android:title="@string/promo" />

    <item
        android:id="@+id/navigation_transaksi"
        android:icon="@drawable/ic_baseline_task_24"
        android:title="@string/transaksi" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>