<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="customer"
            type="com.ayubherpracoyo.atmarental.model.Customer"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.profile.">

            <TextView
                android:id="@+id/txtYour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="36dp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/id"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_customer"
                app:layout_constraintTop_toBottomOf="@+id/txtYour"
                android:textSize="18sp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/idDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{customer.id}"
                android:hint="@string/id_customer"
                app:layout_constraintTop_toBottomOf="@+id/id"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Nama Lengkap"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/idDriver"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
                android:id="@+id/namaLengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:text="@{customer.nama_customer}"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/label_name"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
                android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/namaLengkap"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
                android:id="@+id/emailCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:text="@{customer.email_customer}"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/label_email"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/jenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/jenis_kelamin"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/emailCustomer"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/jenisKelaminCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{customer.gender_customer}"
                android:hint="@string/jenis_kelamin"
                app:layout_constraintTop_toBottomOf="@+id/jenisKelamin"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/noTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nomor_telepon"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/jenisKelaminCustomer"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/noTeleponCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{customer.no_telepon_customer}"
                android:hint="@string/nomor_telepon"
                app:layout_constraintTop_toBottomOf="@+id/noTelepon"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/alamat"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/noTeleponCustomer"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/alamatCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{customer.alamat_customer}"
                android:hint="@string/alamat"
                app:layout_constraintTop_toBottomOf="@+id/alamat"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tglLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tanggal_lahir"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/alamatCustomer"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tglLahirCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{customer.tgl_lahir}"
                android:hint="@string/tanggal_lahir"
                app:layout_constraintTop_toBottomOf="@+id/tglLahir"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/noKtp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_ktp"
                app:layout_constraintTop_toBottomOf="@id/tglLahirCustomer"
                android:textSize="18sp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/noKtpCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{customer.no_ktp_customer}"
                android:hint="@string/nomor_ktp"
                app:layout_constraintTop_toBottomOf="@id/noKtp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/noSim"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomor_sim"
                app:layout_constraintTop_toBottomOf="@id/noKtpCustomer"
                android:textSize="18sp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/noSimCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{customer.no_sim_customer}"
                android:hint="-"
                app:layout_constraintTop_toBottomOf="@id/noSim"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/jumlah"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_transaksi"
                app:layout_constraintTop_toBottomOf="@id/noSimCustomer"
                android:textSize="18sp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/jumlahCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(customer.jumlah_transaksi_customer)}"
                android:hint="@string/jumlah_transaksi"
                app:layout_constraintTop_toBottomOf="@+id/jumlah"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:text="Edit Profile"
                android:textSize="16sp"
                android:backgroundTint="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/jumlahCustomer"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="120dp"
                android:layout_marginTop="36dp"
                android:text="LOGOUT"
                android:textSize="14sp"
                android:backgroundTint="#FF0000"
                app:layout_constraintTop_toBottomOf="@id/btnEdit"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>

